# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  demo.cast  pyproject.toml
page_analyzer/: __init__.py  app.py  database.py  site_request_data.py  utils  utils.py
page_analyzer/static/css/: styles.css
page_analyzer/templates/: base.html  index.html  url_detaly.html  urls.html
